[package]
name = "jose-jwt"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Token (JWT) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7519
"""
documentation = "https://docs.rs/jose-jwt"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwt"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
jose-b64 = { version = "0.1", default-features = false, features = ["secret"], path = "../jose-b64" }
jose-claims = { version = "0.1", default-features = false, path = "../jose-claims" }
jose-jwa = { version = "0.1", path = "../jose-jwa" }
jose-jwk = { version = "0.1", default-features = false, path = "../jose-jwk" }
jose-jws = { version = "0.1", default-features = false, path = "../jose-jws" }
serde = { version = "1.0.185", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.96", default-features = false }

[dev-dependencies]
